Factory & Workcenter & Costcenter Table Complete
Factory & Workcenter & Costcenter Table Complete

--- a/master/website/board/templates/board/cb_cost_center.html
+++ b/master/website/board/templates/board/cb_cost_center.html
@@ -357,10 +357,8 @@
                 }
 
                 function delete_element(elem) {
-                    var id = elem.getAttribute('id');
+                    var id = elem.getAttribute('value');
                     var strurl = "costcenter_element_delete?id=" + id;
-                    //alert(strurl);
-                    //return false;
 
                     xhr = new XMLHttpRequest();
                     xhr.onreadystatechange = function() {
