--- a/master/website/board/templates/board/cb_cost_center.html
+++ b/master/website/board/templates/board/cb_cost_center.html
@@ -354,6 +354,7 @@
                     xhr.open("POST", strurl);
                     xhr.setRequestHeader("X-CSRFToken", csrftoken);
                     xhr.send(null);
+                    location.reload();
                 }
 
                 function delete_element(elem) {
@@ -377,6 +378,7 @@
                     xhr.open("POST", strurl);
                     xhr.setRequestHeader("X-CSRFToken", csrftoken);
                     xhr.send(null);
+                    location.reload();
                 }
             </script>
         </section>
